--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .App__nav {
-	background-color: #0b1b32;
+	background-color: #171518;
 	color: #fff;
 	grid-area: sidebar;
 	height: 100vh;
@@ -17,7 +17,7 @@
 }
 
 .App__header {
-	background-color: #0b1f3a;
+	background-color: #2d2a2f;
 	color: #bdbdbd;
 	font-family: var(--custom-font);
 	grid-area: header;
@@ -31,7 +31,7 @@
 }
 
 .App__main {
-	background-color: #102541;
+	background-color: #2d2a2f;
 	grid-area: main;
 	height: calc(100vh - 120px);
 	overflow: auto;
