--- a/src/CircleButton/CircleButton.css
+++ b/src/CircleButton/CircleButton.css
@@ -1,23 +1,22 @@
-
 .NavCircleButton {
-  background-color: #cacaca;
-  border-radius: 30px;
-  border: 0;
-  color: black;
-  display: block;
-  font-size: 12px;
-  font-weight: bold;
-  height: 60px;
-  padding: 8px;
-  text-align: center;
-  text-decoration: none;
-  width: 60px;
+	background-color: #dacdcd;
+	border-radius: 30px;
+	border: 0;
+	color: black;
+	display: block;
+	font-size: 12px;
+	font-weight: bold;
+	height: 60px;
+	/* padding: 5px; */
+	text-align: center;
+	text-decoration: none;
+	width: 60px;
 }
 
 a.NavCircleButton {
-  padding: 16px 8px 8px;
+	/* padding: 16px 8px 8px; */
 }
 
 .NavCircleButton:hover {
-  cursor: pointer;
+	cursor: pointer;
 }
