--- a/src/components/AddFolder/AddFolder.css
+++ b/src/components/AddFolder/AddFolder.css
@@ -1,5 +1,13 @@
-.NavCircleButton {
-	background-color: #dacdcd;
+.newFolder {
+	color: white;
+}
+
+.create-folder-input {
+	margin: 10px;
+}
+
+/* .create-folder-button {
+	background-color: #cacaca;
 	border-radius: 30px;
 	border: 0;
 	color: black;
@@ -7,16 +15,12 @@
 	font-size: 12px;
 	font-weight: bold;
 	height: 60px;
-	/* padding: 5px; */
+	padding: 8px;
 	text-align: center;
 	text-decoration: none;
 	width: 60px;
-}
+} */
 
-a.NavCircleButton {
-	/* padding: 16px 8px 8px; */
-}
-
-.NavCircleButton:hover {
+.folderCreation_button:hover {
 	cursor: pointer;
 }
