--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .App__nav {
-	background-color: #171518;
+	background-color: #0b1b32;
 	color: #fff;
 	grid-area: sidebar;
 	height: 100vh;
@@ -17,7 +17,7 @@
 }
 
 .App__main {
-	background-color: #2d2a2f;
+	background-color: #102541;
 	grid-area: main;
 	height: calc(100vh - 120px);
 	overflow: auto;
