--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,5 +1,5 @@
 .Button {
-	background-color: #dacdcd;
+	background-color: #cacaca;
 	border-radius: 30px;
 	border: 0;
 	color: black;
@@ -7,14 +7,14 @@
 	font-size: 12px;
 	font-weight: bold;
 	height: 60px;
-	/* padding: 5px; */
+	padding: 8px;
 	text-align: center;
 	text-decoration: none;
 	width: 60px;
 }
 
 a.Button {
-	/* padding: 16px 8px 8px; */
+	padding: 16px 8px 8px;
 }
 
 .Button:hover {
