--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .Header {
-	background-color: #2d2a2f;
+	background-color: #0b1f3a;
 	color: #bdbdbd;
 	font-family: var(--custom-font);
 	grid-area: header;
